버그수정
1. CORS 오류
- As- Is : SecurityConfig에서 Cors 설정에 Pattern을 적용
ex) List("*")
- To-Be : 직접 Url을 넣어줌
2. 감정표현 요청
- 감정표현 취소 시 Null point exceiption 발생
→ Optional을 사용해 해결
3. 감정표현 개수 요청
- 키값이 일부 누락되는 케이스 발생
4. 알람 메시지 인코딩 에러
- column definition 지정